logs/zcrmpcl.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/zcrmpcl'...
Compiling './lib/python3.5/site-packages/zcrmpcl/Test.py'...
***   File "./lib/python3.5/site-packages/zcrmpcl/Test.py", line 23
    print self.local.email
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/zcrmpcl/com'...
Listing './lib/python3.5/site-packages/zcrmpcl/com/zoho'...
Listing './lib/python3.5/site-packages/zcrmpcl/com/zoho/crm'...
Listing './lib/python3.5/site-packages/zcrmpcl/com/zoho/crm/library'...
Listing './lib/python3.5/site-packages/zcrmpcl/com/zoho/crm/library/api'...
Listing './lib/python3.5/site-packages/zcrmpcl/com/zoho/crm/library/common'...
Listing './lib/python3.5/site-packages/zcrmpcl/com/zoho/crm/library/crud'...
Listing './lib/python3.5/site-packages/zcrmpcl/com/zoho/crm/library/exception'...
Listing './lib/python3.5/site-packages/zcrmpcl/com/zoho/crm/library/setup'...
Listing './lib/python3.5/site-packages/zcrmpcl/com/zoho/oauth'...
Listing './lib/python3.5/site-packages/zcrmpcl/com/zoho/oauth/client'...
Listing './lib/python3.5/site-packages/zcrmpcl/com/zoho/oauth/clientapp'...
Listing './lib/python3.5/site-packages/zcrmpcl/com/zoho/oauth/util'...
Listing './lib/python3.5/site-packages/zcrmpcl/resources'...
Listing './lib/python3.5/site-packages/zcrmpcl-0.1.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
